--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     <header>
         <div class="navBox">
             <div class="burgerMenu">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="burgerBar"></div>
+                <div class="burgerBar"></div>
+                <div class="burgerBar"></div>
+            </div>
+            <div class="menuDown">
+                <nav>
+                    <a href="#">Accueil</a>
+                    <a href="#">Questionnaire</a>
+                </nav>
+
             </div>
         </div>
     </header>
