--- a/index.html
+++ b/index.html
@@ -21,8 +21,27 @@
                 </nav>
 
             </div>
+            <div class="menuPrincipal">
+                <nav>
+                    <a href="#">Accueil</a>
+                    <a href="#">Questionnaire</a>
+                    <a href="#"></a>
+                </nav>
+            </div>
         </div>
+        <div class="logoBox">
+            <img src="images/PamG-Logo.JPEG" alt="">
+        </div>
+        <div class="teasingBox">
+            <div class="slug">Vous voulez vous réorienter professionnellement?</div>
+            <div class="slug">Le monde du digital vous intéresse?</div>
+            <div class="slug">Vers quel(s) métier(s) vous diriger? </div>
+        </div>
+        
     </header>
+    <main>
+        
+    </main>
   
     <script src="scripts/main.js"></script> 
 </body>
