avancement page accueil

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="menuDown">
                 <nav>
-                    <a href="#">Accueil</a>
+                    <a href="index.html">Accueil</a>
                     <a href="#">Qui suis-je?</a>
                     <a href="#">Coaching</a>
                     <a href="#">Vers votre métier idéal</a>
@@ -25,7 +25,7 @@
             </div>
             <div class="menuPrincipal">
                 <nav>
-                    <a href="#">Accueil</a>
+                    <a href="index.html">Accueil</a>
                     <a href="#">Qui suis-je?</a>
                     <a href="#">Coaching</a>
                     <a href="#">Vers votre métier idéal</a>
@@ -35,7 +35,9 @@
         <div class="logoBox">
             <img src="images/PamG-logo.png" alt="">
             <div class="sublogo">
-                Business Mentor - Carrière - Coaching
+                <span>Business Mentor</span>
+                <span>Coaching</span>
+                <span>Carrière</span>
             </div>
         </div>
         <div class="backgroundpict"></div>
@@ -84,9 +86,26 @@
                 </div>
             </div>
         </div>
+        <div class="temoignages">
+            <h2>Témoignages</h2>
+            <div class="temoignagesBoxes">
+                <div class="temoignagesBox">
+                    <img src="" alt="">
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fuga nihil veritatis vitae ex officiis, accusantium cumque molestias ullam facilis, provident nobis in beatae exercitationem sint corrupti esse excepturi? Et.</div>
+                </div>
+                <div class="temoignagesBox">
+                    <img src="" alt="">
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fuga nihil veritatis vitae ex officiis, accusantium cumque molestias ullam facilis, provident nobis in beatae exercitationem sint corrupti esse excepturi? Et.</div>
+                </div>
+            </div>
+        </div>
+        <div class="rappelbtntest">
+
+        </div>
        
 
     </main>
+    <footer></footer>
   
     <script src="scripts/main.js"></script> 
 </body>
