--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             Fais le test pour y voir plus clair !
 
         </div>
-        <div class="auberginebtn headerbtn">
-            <a href="#">Le test c'est ICI</a>
+        <div class="headerbtn homebtn">
+            <a href="#">Cliquez pour démarrer le test !</a>
         </div>
         
         
@@ -65,23 +65,23 @@
         <div class="approcheBckgrd">
             <h2>Mon approche</h2>
             <div class="approcheBoxes wrapper">
-                <div class="approcheBox">
-                    <img src="" alt="">
+                <div class="approcheBox fadeIn">
+                    <img src="images/lightbulb.png" alt="" class="rotate-image">
                     <h3>Confiance</h3>
                     <p>La confiance en soi est la clé qui ouvre les portes de la réussite. Ensemble, nous allons cultiver cette confiance, étape par étape, pour que tu puisses briller.</p>
                 </div>
-                <div class="approcheBox">
-                    <img src="" alt="">
+                <div class="approcheBox fadeIn">
+                    <img src="images/lightbulb.png" alt="" class="rotate-image">
                     <h3>Inspiration</h3>
                     <p>Trouve l'inspiration dans chaque instant, chaque défi, chaque réussite. Ensemble, transformons cette inspiration en actions concrètes pour réaliser tes rêves les plus audacieux.</p>
                 </div>
-                <div class="approcheBox">
-                    <img src="" alt="">
+                <div class="approcheBox fadeIn">
+                    <img src="" alt="" class="rotate-image">
                     <h3>Motivation</h3>
                     <p>Je suis là pour t'inspirer, te guider et te voir atteindre des sommets que tu n'aurais jamais imaginés possibles.</p>
                 </div>
-                <div class="approcheBox">
-                    <img src="" alt="">
+                <div class="approcheBox fadeIn">
+                    <img src="" alt="" class="rotate-image">
                     <h3>Productivité</h3>
                     <p>C'est l'art de maximiser chaque instant. Ensemble, trouvons les outils et les stratégies pour que chaque action compte vers ton succès.</p>
                 </div>
@@ -110,8 +110,9 @@
             </div>
         </div>
         <div class="rappelbtn wrapper">
-            <div class="auberginebtn mainbtn">
-                <a href="#">Le test c'est ICI</a>
+            toi aussi tu as envie de changer de vie?
+            <div class="mainbtn homebtn">
+                <a href="#">Cliquez pour démarrer le test !</a>
             </div>
 
         </div>
