test attachement fixed

--- a/index.html
+++ b/index.html
@@ -126,9 +126,26 @@
                 <a href="#" class="reseauxIcon"><div><i class="fa-brands fa-facebook-f"></i></div></a>
                 <a href="#" class="reseauxIcon"><div><i class="fa-brands fa-linkedin-in"></i></div></a>
                 <a href="#" class="reseauxIcon"><div><i class="fa-brands fa-instagram"></i></div></a>
-
             </nav>
         </div>
+        <div class="navsBox wrapper">
+            <nav class="reseauxNav">
+                <a href="index.html">Accueil</a>
+                <a href="#">Qui suis-je?</a>
+                <a href="#">Coaching</a>
+                <a href="#">Vers votre métier idéal</a>
+            </nav>
+            <nav class="reseauxNav">
+                <a href="index.html">Accueil</a>
+                <a href="#">Qui suis-je?</a>
+                <a href="#">Coaching</a>
+                <a href="#">Vers votre métier idéal</a>
+            </nav>
+
+
+
+        </div>
+        
     </footer>
   
     <script src="scripts/main.js"></script> 
