--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div class="backgroundpict"></div>
         <div class="beigeCircle">
             <div class="teasingBox">
-                <div class="slug">Tu veux te réorienter professionnellement?</div>
+                <div class="slug">Tu souhaites te réorienter professionnellement?</div>
                 <div class="slug">Le monde du digital t'intéresse?</div>
-                <div class="slug">Vers quel(s) métier(s) vous diriger? </div>
+                <div class="slug">Vers quel(s) métier(s) te diriger? </div>
             </div>
         </div>
         <div class="aubergineCircle"></div>
@@ -129,24 +129,21 @@
             </nav>
         </div>
         <div class="navsBox wrapper">
-            <nav class="reseauxNav">
+            <nav class="menuFooterNav">
                 <a href="index.html">Accueil</a>
                 <a href="#">Qui suis-je?</a>
                 <a href="#">Coaching</a>
                 <a href="#">Vers votre métier idéal</a>
             </nav>
-            <nav class="reseauxNav">
-                <a href="index.html">Accueil</a>
-                <a href="#">Qui suis-je?</a>
-                <a href="#">Coaching</a>
-                <a href="#">Vers votre métier idéal</a>
+            <nav class="politicsNav">
+                <span><a href="#">Politique de confidentialité</a></span>
+                <span><a href="#">Mentions légales</a></span>
             </nav>
-
-
-
         </div>
-        
     </footer>
+    <div class="designedby">
+        <small>Designed by Laura Lepage</small>
+    </div>
   
     <script src="scripts/main.js"></script> 
 </body>
