--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
             <h2>Mon approche</h2>
             <div class="approcheBoxes wrapper">
                 <div class="approcheBox fadeIn">
-                    <img src="images/lightbulb.png" alt="" class="rotate-image">
+                    <img src="images/confiance.png" alt="" class="rotate-image">
                     <h3>Confiance</h3>
                     <p>La confiance en soi est la clé qui ouvre les portes de la réussite. Ensemble, nous allons cultiver cette confiance, étape par étape, pour que tu puisses briller.</p>
                 </div>
                 <div class="approcheBox fadeIn">
-                    <img src="images/lightbulb.png" alt="" class="rotate-image">
+                    <img src="images/inspiration.png" alt="" class="rotate-image">
                     <h3>Inspiration</h3>
                     <p>Trouve l'inspiration dans chaque instant, chaque défi, chaque réussite. Ensemble, transformons cette inspiration en actions concrètes pour réaliser tes rêves les plus audacieux.</p>
                 </div>
                 <div class="approcheBox fadeIn">
-                    <img src="" alt="" class="rotate-image">
+                    <img src="images/motivation.png" alt="" class="rotate-image">
                     <h3>Motivation</h3>
                     <p>Je suis là pour t'inspirer, te guider et te voir atteindre des sommets que tu n'aurais jamais imaginés possibles.</p>
                 </div>
                 <div class="approcheBox fadeIn">
-                    <img src="" alt="" class="rotate-image">
+                    <img src="images/productivité.png" alt="" class="rotate-image">
                     <h3>Productivité</h3>
                     <p>C'est l'art de maximiser chaque instant. Ensemble, trouvons les outils et les stratégies pour que chaque action compte vers ton succès.</p>
                 </div>
