fin de journée - 15 mai

--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
         <div class="approcheBckgrd">
             <h2>Mon approche</h2>
             <div class="approcheBoxes wrapper">
-                <div class="approcheBox fadeIn">
+                <div class="approcheBox approcheHide">
                     <img src="images/confiance.png" alt="" class="rotate-image">
                     <h3>Confiance</h3>
                     <p>La confiance en soi est la clé qui ouvre les portes de la réussite. Ensemble, nous allons cultiver cette confiance, étape par étape, pour que tu puisses briller.</p>
                 </div>
-                <div class="approcheBox fadeIn">
+                <div class="approcheBox approcheHide">
                     <img src="images/inspiration.png" alt="" class="rotate-image">
                     <h3>Inspiration</h3>
                     <p>Trouve l'inspiration dans chaque instant, chaque défi, chaque réussite. Ensemble, transformons cette inspiration en actions concrètes pour réaliser tes rêves les plus audacieux.</p>
                 </div>
-                <div class="approcheBox fadeIn">
+                <div class="approcheBox approcheHide">
                     <img src="images/motivation.png" alt="" class="rotate-image">
                     <h3>Motivation</h3>
                     <p>Je suis là pour t'inspirer, te guider et te voir atteindre des sommets que tu n'aurais jamais imaginés possibles.</p>
                 </div>
-                <div class="approcheBox fadeIn">
-                    <img src="images/productivité.png" alt="" class="rotate-image">
+                <div class="approcheBox approcheHide">
+                    <img src="images/productivite.png" alt="" class="rotate-image">
                     <h3>Productivité</h3>
                     <p>C'est l'art de maximiser chaque instant. Ensemble, trouvons les outils et les stratégies pour que chaque action compte vers ton succès.</p>
                 </div>
@@ -90,7 +90,7 @@
         <div class="temoignagesBckgd">
             <h2>Paroles de réussite</h2>
             <div class="temoignagesBoxes wrapper">
-                <div class="temoignageBox">
+                <div class="temoignageBox temoignageleft">
                     <img src="images/pexels-edmond-dantes-4347368.jpg" alt="">
                     <p>Pamela m'a ouvert de nouvelles portes et m'a donné la confiance nécessaire pour explorer un nouveau chemin professionnel passionnant et gratifiant. Ses conseils avisés et son soutien inébranlable ont été des piliers essentiels dans ma réussite. Grâce à lui, j'ai pu identifier mes forces, surmonter mes doutes et avancer avec détermination vers mes objectifs. Chaque session avec lui était une source d'inspiration et de motivation.</p>
                 </div>
@@ -98,7 +98,7 @@
                     <img src="images/pexels-edmond-dantes-4347368.jpg" alt="">
                     <p>Pamela m'a ouvert de nouvelles portes et m'a donné la confiance nécessaire pour explorer un nouveau chemin professionnel passionnant et gratifiant. Ses conseils avisés et son soutien inébranlable ont été des piliers essentiels dans ma réussite. Grâce à lui, j'ai pu identifier mes forces, surmonter mes doutes et avancer avec détermination vers mes objectifs. Chaque session avec lui était une source d'inspiration et de motivation.</p>
                 </div>
-                <div class="temoignageBox">
+                <div class="temoignageBox temoignageright">
                     <img src="images/pexels-edmond-dantes-4347368.jpg" alt="">
                     <p>Pamela m'a ouvert de nouvelles portes et m'a donné la confiance nécessaire pour explorer un nouveau chemin professionnel passionnant et gratifiant. Ses conseils avisés et son soutien inébranlable ont été des piliers essentiels dans ma réussite. Grâce à lui, j'ai pu identifier mes forces, surmonter mes doutes et avancer avec détermination vers mes objectifs. Chaque session avec lui était une source d'inspiration et de motivation.</p>
                 </div>
