--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Pamela G. Digital - Business Mentor</title>
 </head>
 <body>
-    <header  class="headerIndex">
+    <header>
         <div class="navBox">
             <div class="burgerMenu">
                 <div class="burgerBar"></div>
