--- a/versmetierideal.html
+++ b/versmetierideal.html
@@ -35,12 +35,14 @@
                     <a href="#">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
                 </nav>
-            </div>
+            </div> 
+        </div>
+        <div class="versmetieridealBox">
+
         </div>
     </header>
-    <main class="mainMetierIdeal">
-        bonjoour
-    </main>
+    
+    
 
 
 
