push fin de journée

--- a/versmetierideal.html
+++ b/versmetierideal.html
@@ -9,67 +9,19 @@
     <title>Pamela G. Digital - Business Mentor</title>
 </head>
 <body>
-    <header>
-        <div class="navBox">
-            <div class="burgerMenu">
-                <div class="burgerBar"></div>
-                <div class="burgerBar"></div>
-                <div class="burgerBar"></div>
-            </div>
-            <div class="menuDown">
-                <nav>
-                    <a href="index.html">Accueil</a>
-                    <a href="#">Qui suis-je?</a>
-                    <a href="#">Coaching</a>
-                    <a href="versmetierideal.html">Vers votre métier idéal</a>
-                    <a href="#">Prendre un rendez-vous</a>
-                    <a href="#">Contact</a>
-                </nav>
-            </div>
-            <div class="menuPrincipal">
-                <nav>
-                    <a href="index.html">Accueil</a>
-                    <a href="#">Qui suis-je?</a>
-                    <a href="#">Coaching</a>
-                    <a href="versmetierideal.html">Vers votre métier idéal</a>
-                    <a href="#">Prendre un rendez-vous</a>
-                    <a href="#">Contact</a>
-                </nav>
-            </div>
+    <div class="metierIdealBox">
+        <div class="cross">
+            <div class="crossLine"></div>
+            <div class="crossLine"></div>
         </div>
-    </header>
-
-
-
-
-    
-    <footer>
-        <div class="reseauxBox wrapper">
-            <h2>Rejoins-moi sur...</h2>
-            <nav>
-                <a href="#" class="reseauxIcon"><div><i class="fa-brands fa-facebook-f"></i></div></a>
-                <a href="#" class="reseauxIcon"><div><i class="fa-brands fa-linkedin-in"></i></div></a>
-                <a href="#" class="reseauxIcon"><div><i class="fa-brands fa-instagram"></i></div></a>
-            </nav>
+        <div class="questionnaireBox">
+            <img src="images/PamG-icon.png" alt="PamG_miniLogo">
         </div>
-        <div class="navsBox wrapper">
-            <nav class="menuFooterNav">
-                <a href="index.html">Accueil</a>
-                <a href="#">Qui suis-je?</a>
-                <a href="#">Coaching</a>
-                <a href="versmetierideal.html">Vers votre métier idéal</a>
-                <a href="#">Prendre un rendez-vous</a>
-                <a href="#">Contact</a>
-            </nav>
-            <nav class="politicsNav">
-                <span><a href="#">Politique de confidentialité</a></span>
-                <span><a href="#">Mentions légales</a></span>
-            </nav>
-        </div>
-    </footer>
-    <div class="createdby">
-        <small>Created by Laura Lepage</small>
+
+
     </div>
+    
+   
   
     <script src="scripts/main.js"></script> 
 </body>
