--- a/index.html
+++ b/index.html
@@ -145,7 +145,13 @@
     <div class="createdby">
         <small>Created by Laura Lepage</small>
     </div>
+    <div class="cookie">
+        <p class="policy">En cliquant sur « Accepter tous les cookies », vous acceptez le stockage de cookies sur votre appareil pour améliorer la navigation sur le site, analyser son utilisation et contribuer à nos efforts de marketing.</p>
+        <button class="accept">Autoriser tous les cookies</button>
+        <button class="refuse">Tout refuser</button>
+    </div>
   
     <script src="scripts/main.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
 </body>
 </html>
