fin de soirée 16 mai

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                     <a href="#">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
                 </nav>
+                <div class="connect">
+                    <i class="fa-regular fa-user"></i>
+                    <a href="#">Se connecter</a>
+                </div>
             </div>
         </div>
         <div class="logoBox">
