header call to action

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
     <header>
+        <a href="#">
+            <div class="connect">
+                <i class="fa-regular fa-user"></i>
+                Se connecter</a>
+            </div>
+        </a>
+        
         <div class="navBox">
             <div class="burgerMenu">
                 <div class="burgerBar"></div>
@@ -21,7 +28,7 @@
                     <a href="index.html">Accueil</a>
                     <a href="#">Qui suis-je?</a>
                     <a href="#">Coaching</a>
-                    <a href="versmetierideal.html">Vers votre métier idéal</a>
+                    <a href="versmetierideal.html">Vers ton métier idéal</a>
                     <a href="#">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
                 </nav>
@@ -31,14 +38,10 @@
                     <a href="index.html">Accueil</a>
                     <a href="#">Qui suis-je?</a>
                     <a href="#">Coaching</a>
-                    <a href="versmetierideal.html">Vers votre métier idéal</a>
                     <a href="#">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
                 </nav>
-                <div class="connect">
-                    <i class="fa-regular fa-user"></i>
-                    <a href="#">Se connecter</a>
-                </div>
+                <a href="versmetierideal.html" class="metiercallaction">Vers ton métier idéal</a>
             </div>
         </div>
         <div class="logoBox">
@@ -149,11 +152,11 @@
     <div class="createdby">
         <small>Created by Laura Lepage</small>
     </div>
-    <div class="cookie">
+    <!-- <div class="cookie">
         <p class="policy">En cliquant sur « Accepter tous les cookies », vous acceptez le stockage de cookies sur votre appareil pour améliorer la navigation sur le site, analyser son utilisation et contribuer à nos efforts de marketing.</p>
         <button class="accept">Autoriser tous les cookies</button>
         <button class="refuse">Tout refuser</button>
-    </div>
+    </div> -->
   
     <script src="scripts/main.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
