--- a/versmetierideal.html
+++ b/versmetierideal.html
@@ -19,15 +19,14 @@
             <div class="quiz">
                 <div id="quiz"></div>
                 <div id="result" style="display:none;">
-                    <h2>Résultat :</h2>
                     <p id="resultText"></p>
+                    <p id="resultProfil"></p>
+                    <p id="resultExplanation"></p>
+                    <p id="resultPossibilities"></p>
+                    <p id="resultConclusion"></p>
                     <button onclick="restartQuiz()">Recommencer le quiz</button>
                 </div>
             </div>
-                
-
-
-
         </div>
     
    
