--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#">
             <div class="connect">
                 <i class="fa-regular fa-user"></i>
-                Se connecter</a>
+                Mon compte</a>
             </div>
         </a>
         <div class="navBox">
@@ -30,6 +30,8 @@
                     <a href="versmetierideal.html">Vers ton métier idéal</a>
                     <a href="#">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
+                    <hr>
+                    <a href="#">Mon compte</a>
                 </nav>
             </div>
             <div class="menuPrincipal">
