--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#">
             <div class="connect">
                 <i class="fa-regular fa-user"></i>
-                Mon compte</a>
+                Se connecter</a>
             </div>
         </a>
         <div class="navBox">
@@ -27,11 +27,13 @@
                     <a href="index.html">Accueil</a>
                     <a href="#">Qui suis-je?</a>
                     <a href="#">Coaching</a>
-                    <a href="versmetierideal.html">Vers ton métier idéal</a>
+                    
                     <a href="#">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
+                    <div class="btnMenuDown"><a href="versmetierideal.html">Vers ton métier idéal</a></div>
+
                     <hr>
-                    <a href="#">Mon compte</a>
+                    <a href="#">Se connecter</a>
                 </nav>
             </div>
             <div class="menuPrincipal">
@@ -53,12 +55,14 @@
                 <span>Carrière</span>
             </div>
         </div>
-        <div class="backgroundpict"></div>
+        <div class="backgroundpictBox">
+            <div class="backgroundpict"></div>
+        </div>
         <div class="beigeCircle">
             <div class="teasingBox">
                 <div class="slug">Tu souhaites te réorienter professionnellement?</div>
                 <div class="slug">Le monde du digital t'intéresse?</div>
-                <div class="slug">Vers quel(s) métier(s) te diriger? </div>
+                <div class="slug">Vers quel(s) métier(s) te diriger?</div>
             </div>
         </div>
         <div class="aubergineCircle"></div>
@@ -67,7 +71,7 @@
             Fais le test pour y voir plus clair !
         </div>
         <div class="headerbtn homebtn">
-            <a href="versmetierideal.html">Cliquez pour démarrer le test !</a>
+            <a href="versmetierideal.html">Clique pour démarrer le test !</a>
         </div>
     </header>
     <main>
@@ -96,6 +100,17 @@
                 </div>
             </div>
         </div>
+        <div class="rappelbtn">
+            <h2>Tu te reconnais?</h2>
+            <div class="mainbtn homebtn">
+                <a href="versmetierideal.html">Clique pour démarrer le test !</a>
+            </div>
+        </div>
+        <div class="balancoirebckgd">
+            <div>
+                <p>"Un bon mentor espère vous voir monter, mais un super mentor sait que vous y arriverez."</p>
+            </div>
+        </div>
         <div class="temoignagesBckgd">
             <h2>Paroles de réussite</h2>
             <div class="temoignagesBoxes wrapper">
@@ -113,18 +128,7 @@
                 </div>
             </div>
         </div>
-        <div class="balancoirebckgd">
-            <div>
-                <p>"Un bon mentor espère vous voir monter, mais un super mentor sait que vous y arriverez."</p>
-            </div>
-        </div>
-        <div class="rappelbtn wrapper">
-            toi aussi tu as envie de changer de vie?
-            <div class="mainbtn homebtn">
-                <a href="versmetierideal.html">Cliquez pour démarrer le test !</a>
-            </div>
-
-        </div>
+        
     </main>
     <footer>
         <div class="reseauxBox wrapper">
