--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="btnMenuDown"><a href="versmetierideal.html">Vers ton métier idéal</a></div>
 
                     <hr>
-                    <a href="#">Se connecter</a>
+                    <a href="#"><i class="fa-regular fa-user"></i>Se connecter</a>
                 </nav>
             </div>
             <div class="menuPrincipal">
@@ -102,6 +102,13 @@
         </div>
         <div class="rappelbtn">
             <h2>Tu te reconnais?</h2>
+            <div class="reconnaisBox wrapper">
+                <p>Tu n'arrives pas à trouver ta voie dans le monde du digital</p>
+                <p>Tu ne sais pas par où commencer pour te lancer dans une carrière digitale</p>
+                <p>Tu aimerais te réorienter vers le secteur du digital, mais c'est compliqué de le faire seul</p>
+                <p>Tu ne sais pas quelles compétences digitales développer pour réussir ta transition professionnelle</p>
+                <p>Tu trouves difficile de naviguer dans le monde numérique et tu aimerais être guidé par un mentor</p>
+            </div>
             <div class="mainbtn homebtn">
                 <a href="versmetierideal.html">Clique pour démarrer le test !</a>
             </div>
@@ -111,7 +118,7 @@
                 <p>"Un bon mentor espère vous voir monter, mais un super mentor sait que vous y arriverez."</p>
             </div>
         </div>
-        <div class="temoignagesBckgd">
+        <!-- <div class="temoignagesBckgd">
             <h2>Paroles de réussite</h2>
             <div class="temoignagesBoxes wrapper">
                 <div class="temoignageBox temoignageleft">
@@ -127,7 +134,7 @@
                     <p>Pamela m'a ouvert de nouvelles portes et m'a donné la confiance nécessaire pour explorer un nouveau chemin professionnel passionnant et gratifiant. Ses conseils avisés et son soutien inébranlable ont été des piliers essentiels dans ma réussite. Grâce à lui, j'ai pu identifier mes forces, surmonter mes doutes et avancer avec détermination vers mes objectifs. Chaque session avec lui était une source d'inspiration et de motivation.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
         
     </main>
     <footer>
