--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="#">
             <div class="connect">
                 <i class="fa-regular fa-user"></i>
-                Se connecter</a>
+                Se connecter
             </div>
         </a>
         <div class="navBox">
@@ -27,16 +27,14 @@
                     <a href="index.html">Accueil</a>
                     <a href="#">Qui suis-je?</a>
                     <a href="#">Coaching</a>
-                    
                     <a href="#">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
-                    <div class="btnMenuDown"><a href="versmetierideal.html">Vers ton métier idéal</a></div>
-
+                    <a href="versmetierideal.html"><div class="btnMenuDown">Vers ton métier idéal</div></a>
                     <hr>
                     <a href="#"><i class="fa-regular fa-user"></i>Se connecter</a>
                 </nav>
             </div>
-            <div class="menuPrincipal">
+            <div class="menuPrincipal wrapper">
                 <nav>
                     <a href="index.html">Accueil</a>
                     <a href="#">Qui suis-je?</a>
@@ -70,9 +68,11 @@
         <div class="textbeforebtn">
             Fais le test pour y voir plus clair !
         </div>
-        <div class="headerbtn homebtn">
-            <a href="versmetierideal.html">Clique pour démarrer le test !</a>
-        </div>
+        <a href="versmetierideal.html" class="homebtn headerbtn">
+            <div>
+                Clique pour démarrer le test !
+            </div>
+        </a>
     </header>
     <main>
         <div class="approcheBckgrd">
@@ -103,38 +103,37 @@
         <div class="rappelbtn">
             <h2>Tu te reconnais?</h2>
             <div class="reconnaisBox wrapper">
-                <p>Tu n'arrives pas à trouver ta voie dans le monde du digital</p>
-                <p>Tu ne sais pas par où commencer pour te lancer dans une carrière digitale</p>
-                <p>Tu aimerais te réorienter vers le secteur du digital, mais c'est compliqué de le faire seul</p>
-                <p>Tu ne sais pas quelles compétences digitales développer pour réussir ta transition professionnelle</p>
-                <p>Tu trouves difficile de naviguer dans le monde numérique et tu aimerais être guidé par un mentor</p>
+                <p><i class="fa-solid fa-caret-right"></i><span>Tu n'arrives pas</span> à trouver ta voie dans le monde du digital</p>
+                <p><i class="fa-solid fa-caret-right"></i><span>Tu ne sais pas</span> par où commencer pour te lancer dans une carrière digitale</p>
+                <p><i class="fa-solid fa-caret-right"></i><span>Tu aimerais</span> te réorienter vers le secteur du digital, mais c'est compliqué de le faire seul</p>
+                <p><i class="fa-solid fa-caret-right"></i><span>Tu ne sais pas</span> quelles compétences digitales développer pour réussir ta transition professionnelle</p>
+                <p><i class="fa-solid fa-caret-right"></i><span>Tu trouves difficile</span> de naviguer dans le monde numérique et tu aimerais être guidé par un mentor</p>
             </div>
-            <div class="mainbtn homebtn">
-                <a href="versmetierideal.html">Clique pour démarrer le test !</a>
-            </div>
+            <a href="versmetierideal.html" class="homebtn headerbtn">
+                <div>
+                    Clique pour démarrer le test !
+                </div>
+            </a>
         </div>
         <div class="balancoirebckgd">
             <div>
                 <p>"Un bon mentor espère vous voir monter, mais un super mentor sait que vous y arriverez."</p>
             </div>
         </div>
-        <!-- <div class="temoignagesBckgd">
+        <div class="temoignagesBckgd">
             <h2>Paroles de réussite</h2>
             <div class="temoignagesBoxes wrapper">
                 <div class="temoignageBox temoignageleft">
-                    <img src="images/pexels-edmond-dantes-4347368.jpg" alt="">
                     <p>Pamela m'a ouvert de nouvelles portes et m'a donné la confiance nécessaire pour explorer un nouveau chemin professionnel passionnant et gratifiant. Ses conseils avisés et son soutien inébranlable ont été des piliers essentiels dans ma réussite. Grâce à lui, j'ai pu identifier mes forces, surmonter mes doutes et avancer avec détermination vers mes objectifs. Chaque session avec lui était une source d'inspiration et de motivation.</p>
                 </div>
                 <div class="temoignageBox">
-                    <img src="images/pexels-edmond-dantes-4347368.jpg" alt="">
                     <p>Pamela m'a ouvert de nouvelles portes et m'a donné la confiance nécessaire pour explorer un nouveau chemin professionnel passionnant et gratifiant. Ses conseils avisés et son soutien inébranlable ont été des piliers essentiels dans ma réussite. Grâce à lui, j'ai pu identifier mes forces, surmonter mes doutes et avancer avec détermination vers mes objectifs. Chaque session avec lui était une source d'inspiration et de motivation.</p>
                 </div>
                 <div class="temoignageBox temoignageright">
-                    <img src="images/pexels-edmond-dantes-4347368.jpg" alt="">
                     <p>Pamela m'a ouvert de nouvelles portes et m'a donné la confiance nécessaire pour explorer un nouveau chemin professionnel passionnant et gratifiant. Ses conseils avisés et son soutien inébranlable ont été des piliers essentiels dans ma réussite. Grâce à lui, j'ai pu identifier mes forces, surmonter mes doutes et avancer avec détermination vers mes objectifs. Chaque session avec lui était une source d'inspiration et de motivation.</p>
                 </div>
             </div>
-        </div> -->
+        </div>
         
     </main>
     <footer>
