html/css bien avancés

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <div class="textbeforebtn">
             Fais le test pour y voir plus clair !
         </div>
-        <a href="versmetierideal.html" class="homebtn headerbtn">
-            <div>
-                Clique pour démarrer le test !
+        <a href="versmetierideal.html" >
+            <div class="homebtn headerbtn">
+                <div class="click">Clique pour démarrer le test !</div>
             </div>
         </a>
     </header>
@@ -109,11 +109,16 @@
                 <p><i class="fa-solid fa-caret-right"></i><span>Tu ne sais pas</span> quelles compétences digitales développer pour réussir ta transition professionnelle</p>
                 <p><i class="fa-solid fa-caret-right"></i><span>Tu trouves difficile</span> de naviguer dans le monde numérique et tu aimerais être guidé par un mentor</p>
             </div>
-            <a href="versmetierideal.html" class="homebtn headerbtn">
-                <div>
-                    Clique pour démarrer le test !
+            <p class="potentiel">Au moins une de ces situations te parle et tu es prêt(e) à débloquer ton potentiel dans le monde digital ?</p>
+            <a href="versmetierideal.html" >
+                <div class="homebtn mainbtn">
+                    <div class="click">
+                        <div>Clique pour démarrer le test !</div>
+                        <div>Je te guide vers ta nouvelle carrière numérique </div>
+                    </div>
                 </div>
             </a>
+            <p></p>
         </div>
         <div class="balancoirebckgd">
             <div>
@@ -124,13 +129,37 @@
             <h2>Paroles de réussite</h2>
             <div class="temoignagesBoxes wrapper">
                 <div class="temoignageBox temoignageleft">
-                    <p>Pamela m'a ouvert de nouvelles portes et m'a donné la confiance nécessaire pour explorer un nouveau chemin professionnel passionnant et gratifiant. Ses conseils avisés et son soutien inébranlable ont été des piliers essentiels dans ma réussite. Grâce à lui, j'ai pu identifier mes forces, surmonter mes doutes et avancer avec détermination vers mes objectifs. Chaque session avec lui était une source d'inspiration et de motivation.</p>
+                    <div class="starsFive">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <p>Pamela m'a donné la confiance pour explorer un nouveau chemin professionnel. Ses conseils et son soutien ont été essentiels pour identifier mes forces, surmonter mes doutes et avancer avec détermination. Chaque session était inspirante et motivante.</p>
+                    <small>Jessica V.</small>
                 </div>
                 <div class="temoignageBox">
-                    <p>Pamela m'a ouvert de nouvelles portes et m'a donné la confiance nécessaire pour explorer un nouveau chemin professionnel passionnant et gratifiant. Ses conseils avisés et son soutien inébranlable ont été des piliers essentiels dans ma réussite. Grâce à lui, j'ai pu identifier mes forces, surmonter mes doutes et avancer avec détermination vers mes objectifs. Chaque session avec lui était une source d'inspiration et de motivation.</p>
+                    <div class="starsFour">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <p>Grâce à Pamela, j'ai découvert de nouvelles perspectives professionnelles et gagné en assurance. Ses conseils éclairés et son soutien m'ont aidé à identifier mes points forts et à poursuivre mes objectifs avec confiance. Chaque session était une véritable source de motivation et d'inspiration.</p>
+                    <small>Céline D.</small>
                 </div>
                 <div class="temoignageBox temoignageright">
-                    <p>Pamela m'a ouvert de nouvelles portes et m'a donné la confiance nécessaire pour explorer un nouveau chemin professionnel passionnant et gratifiant. Ses conseils avisés et son soutien inébranlable ont été des piliers essentiels dans ma réussite. Grâce à lui, j'ai pu identifier mes forces, surmonter mes doutes et avancer avec détermination vers mes objectifs. Chaque session avec lui était une source d'inspiration et de motivation.</p>
+                    <div class="starsFive">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <p>Pamela m'a permis de transformer ma carrière en me donnant la confiance nécessaire pour embrasser de nouvelles opportunités. Ses conseils avisés et son soutien constant ont été cruciaux pour ma progression, renforçant ma détermination et mon enthousiasme.</p>
+                    <small>Philippe R.</small>
                 </div>
             </div>
         </div>
