--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="index.html">Accueil</a>
                     <a href="#">Qui suis-je?</a>
                     <a href="#">Coaching</a>
-                    <a href="#">Prendre un rendez-vous</a>
+                    <a href="prendreunrendezvous.html">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
                     <a href="versmetierideal.html"><div class="btnMenuDown">Vers ton métier idéal</div></a>
                     <hr>
@@ -39,7 +39,7 @@
                     <a href="index.html">Accueil</a>
                     <a href="#">Qui suis-je?</a>
                     <a href="#">Coaching</a>
-                    <a href="#">Prendre un rendez-vous</a>
+                    <a href="prendreunrendezvous.html">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
                 </nav>
                 <a href="versmetierideal.html" class="metiercallaction">Vers ton métier idéal</a>
