--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#">Coaching</a>
                     <a href="prendreunrendezvous.html">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
-                    <a href="versmetierideal.html"><div class="btnMenuDown">Vers ton métier idéal</div></a>
+                    <a href="versmetierideal.html" class="loadLink"><div class="btnMenuDown">Vers ton métier idéal</div></a>
                     <hr>
                     <a href="#"><i class="fa-regular fa-user"></i>Se connecter</a>
                 </nav>
@@ -42,7 +42,7 @@
                     <a href="prendreunrendezvous.html">Prendre un rendez-vous</a>
                     <a href="#">Contact</a>
                 </nav>
-                <a href="versmetierideal.html" class="metiercallaction">Vers ton métier idéal</a>
+                <a href="versmetierideal.html" class="metiercallaction loadLink">Vers ton métier idéal</a>
             </div>
         </div>
         <div class="logoBox">
@@ -68,7 +68,7 @@
         <div class="textbeforebtn">
             Fais le test pour y voir plus clair !
         </div>
-        <a href="versmetierideal.html" >
+        <a href="chargement.html" class="loadLink">
             <div class="homebtn headerbtn">
                 <div class="click">Clique pour démarrer le test !</div>
             </div>
@@ -112,7 +112,7 @@
             <p class="potentiel">Au moins une de ces situations te parle et tu es prêt(e) à débloquer ton potentiel dans le monde digital ?</p>
             <a href="versmetierideal.html" >
                 <div class="homebtn mainbtn">
-                    <div class="click">
+                    <div class="click loadLink">
                         <div>Clique pour démarrer le test !</div>
                         <div>Je te guide vers ta nouvelle carrière numérique </div>
                     </div>
@@ -179,7 +179,7 @@
                 <a href="index.html">Accueil</a>
                 <a href="#">Qui suis-je?</a>
                 <a href="#">Coaching</a>
-                <a href="versmetierideal.html">Vers votre métier idéal</a>
+                <a href="versmetierideal.html" class="loadLink">Vers ton métier idéal</a>
                 <a href="#">Prendre un rendez-vous</a>
                 <a href="#">Contact</a>
             </nav>
