--- a/chargement.html
+++ b/chargement.html
@@ -16,7 +16,7 @@
                 </div>
                 <div id="percentage">0%</div>
             </div>
-            
-<script src="scripts/main.js"></script> 
+    </div>     
+    <script src="scripts/chargement.js"></script> 
 </body>
 </html>
